Squash iOS video position bug

--- a/src/components/globals/banner/_banner.scss
+++ b/src/components/globals/banner/_banner.scss
@@ -5,6 +5,7 @@
   overflow: hidden;
   position: relative;
   transition: font-size .2s, letter-spacing .2s, line-height .2s, height .2s;
+  width :100%;
 
   @include bpMinExtraSmall {
     height: 275px;
@@ -31,6 +32,14 @@
     }
   }
 
+  &__video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
   &__img {
     display: block;
     height: 100%;
@@ -38,6 +47,7 @@
     object-fit: cover;
     position: absolute;
     top: 0;
+    right: 0;
     width: 100%;
 
     .c-banner--blurred & {
